feat: add user and session table, add need authorization header to tasks
